TestSuite/errors/err0238.pas
type
  MyList<T> = class(List<T>)
  public
    procedure Clear; override;
    begin end;
  end;

begin
end.